This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
2/28/25: Fixed ReportAlignShift, ReportShiftDiffFrom, and
ReportISforBufferShift to take camera and mag index from buffer if available
(In 4.1).

2/28/25: Fixed getting nitrogen level from transfer tank on JEOL (In 4.1).

2/24/25: Added property for delay on first access to JEOL vacuum gauge.

2/21/25: Fixed use of beam shift cal from LM when in lowest nonLM EFTEM mag
and allowed beam shift cal in TEM to be done at highest LM mag (In 4.1).

2/20/25: SEM_4-2-0beta15
2/20/25: Added Python script function to indicate that a try block has
started so that message boxes can be suppressed and errors handled.

2/20/25: When running Refine ZLP from Acquire at Items, it is now possible to
specify that different energy ranges should be tried upon failure in Low Dose
mode, and that failure should not generate an error.  The script command has
similar options.

2/20/25: Changed multishot display after combining to show boundaries around
all combined points and to draw either boxes at acquire areas or triangles at
holes being skipped.

2/20/25: Consolidated all the options about which area to use for tasks in Low
Dose into a new dialog and eliminated the menu entries for them.

2/19:25: Added property for scaling the reported slit width of a GIF.

2/19/25: SEM_4-1-21
2/19/25: Prevented beam shift from being calibrated at mag indexes that are in
LM for TEM and nonLM in EFTEM for FEI scopes (In 4.1).

2/18/25: Fixed combining holes on a hex grid when there is an inversion
between stage and image shift coordinates (In 4.1).

2/12/25: Eliminated property SocketRecvImageTimeout, it is not needed.

2/12/25: Fixed hangs/timeouts receiving images over socket in SerialEM (In
4.1).
