@@ -99,6 +99,7 @@ BOOL_SETT_GETSET("UsePiezoForLDAxis", mWinApp->mScope->, UsePiezoForLDaxis)
 BOOL_SETT_GETSET("AdjustFocusForProbe", mWinApp->mScope->, AdjustFocusForProbe)
 INT_SETT_GETSET("NormalizeAllOnMagChange", mWinApp->mScope->, NormAllOnMagChange)
 INT_SETT_GETSET("IdleTimeToCloseValves", mWinApp->mScope->, IdleTimeToCloseValves)
+INT_SETT_GETSET("IdleTimeToStopEmission", mWinApp->mScope->, IdleTimeToStopEmission)
 BOOL_SETT_GETSET("NormAutofocusViaView", mWinApp->mFocusManager->, NormalizeViaView)
 BOOL_SETT_GETSET("SkipBlankingInLowDose", mWinApp->mScope->, SkipBlankingInLowDose)
 BOOL_SETT_GETSET("TrimBordersInAutoalign", mWinApp->mShiftManager->, TrimDarkBorders)
