@@ -5014,6 +5014,13 @@
             the first call to get the gauge value gives an error with unknown method 30 and 
             unknown status 255.&nbsp; The default is 0.</TD>
         </TR>
+        <TR VALIGN="top">
+          <TD>AllowStopEmissionIfIdle</TD>
+          <TD>Set to 1 to allow users to set a time after which emission should be turned 
+            off when the program is idle in the 
+            <a href="menu_tasks#hid_specializedoptions_closevalvesafterlonginactivity">Turn Off Beam After Long Inactivity</a>
+             menu entry.&nbsp; This is appropriate only for cold FEGs.</TD>
+        </TR>
       </TABLE>
       <BR>
       <P><A NAME="hitachi_properties"></A><B>Hitachi properties</B></P>
